<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item android:id="@+id/Home"
       android:title="@string/Home"

       android:icon="@drawable/ic_baseline_home_24"
       app:showAsAction="ifRoom"
       >
   </item>
    <item android:id="@+id/India"
        android:title="@string/India"

        android:icon="@drawable/india"
        app:showAsAction="ifRoom"
        >
    </item>
    <item android:id="@+id/allcountry"
        android:title="@string/all_country"
        android:icon="@drawable/country"
        app:showAsAction="ifRoom"
        >
    </item>
    <item android:id="@+id/Awareness"
        android:title="Awareness"
        android:icon="@drawable/symptoms"
        app:showAsAction="ifRoom"
        >
    </item>


</menu>