<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#22B2F3"
    tools:context=".Homefragment">



  
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="5dp"
        app:cardBackgroundColor="#F3F0F6"
        tools:ignore="UnusedAttribute">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cases"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="#03A9F4"
                android:id="@+id/totalcase"
                tools:ignore="RelativeOverlap">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="#03A9F4"
                android:id="@+id/totalcaseN"
                android:layout_alignParentRight="true"
                tools:ignore="HardcodedText"
                android:layout_alignParentEnd="true">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/death"
                android:textColor="#FF5722"
                android:layout_below="@+id/totalcase">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_below="@+id/totalcase"
                android:id="@+id/deathN"
                android:textColor="#FF5722"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                tools:ignore="HardcodedText">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="#009688"
                android:id="@+id/recovered"
                android:layout_below="@+id/death">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_below="@+id/death"
                android:id="@+id/recoveredN"
                android:textColor="#009688"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                tools:ignore="HardcodedText">

            </TextView>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#22B2F3"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stay Home!!"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="#4CAF50"
            android:gravity="center_horizontal"
            tools:ignore="HardcodedText">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stay Safe!!"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="#2AEC32"
            android:layout_gravity="center_horizontal"
            tools:ignore="HardcodedText">

        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/covid192"
            android:padding="20dp"


            android:layout_gravity="center_horizontal">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/covid_description"
            android:layout_margin="20dp"
            android:padding="40dp"
            android:textColor="@color/black">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>
    
</LinearLayout>